# mirofish

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  MIGRATION.md  PULL_REQUEST.md  README-EN.md  README-ES.md  README-JA.md  README-KO.md  README-PT-BR.md  README-VI.md  README-ZH.md  README.md  TESTING.md  comparison_demo.py  docker-compose.local.yml  docker-compose.yml  docker-compose.yml.bak2  launcher.py  old_vi_reference.json  package.json  plan.md  render.yaml  setup.sh  start.sh  vite.config.js
backend/: __init__.py  mirofish_backend.spec  pyproject.toml  requirements-oasis.txt  requirements.txt  run.py  wsgi.py
backend/.playwright-mcp/: page-2026-04-06T04-38-01-205Z.yml
backend/app/: __init__.py  auth.py  config.py  database.py
backend/eval/: __init__.py  ablation.py  determinism.py  mocks.py  pipeline.py  runner.py  scoring.py  storage.py  verdict.py
backend/local_zep/: __init__.py  client.py  embeddings.py  extraction.py  models.py  reranker.py  settings.py  store.py
backend/scripts/: action_logger.py  ensemble_predict.py  fake_openai_server.py  graphiti_smoke_test.py  run_parallel_simulation.py  run_private_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_lmstudio.py  test_local_zep_e2e.py  test_profile_format.py
backend/tests/: __init__.py  conftest.py  test_action_mapper.py  test_api_smoke.py  test_auth_keys.py  test_auth_middleware.py  test_auth_quotas.py  test_character_engine.py  test_checkpoint.py  test_chokepoint_scoring.py  test_config.py  test_config_validated.py  test_cost_estimator.py  test_error_response.py  test_eval_determinism.py  test_eval_mocks.py  test_eval_runner.py  test_eval_scoring.py  test_eval_storage.py  test_eval_verdict.py  test_exceptions.py  test_federal_register_feed.py  test_file_parser.py  test_file_parser_xml.py  test_god_mode.py  test_graph_pipeline.py  test_llm_accounting.py  test_llm_base.py  test_llm_client.py  test_llm_client_json_extract.py  test_llm_ollama.py  test_llm_openai_compat.py  test_llm_router.py  (+39 more)
mirofish-osint/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
(+736 files in other folders)
