[project]
name = "mirofish-osint"
version = "0.1.0"
description = "OSINT Research Agent MCP Server for MiroFish"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "newspaper4k>=0.9.0",
    "wikipedia-api>=0.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
